--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "FX OSK",
-    "version": "1.11.0",
-    "description": "On-Screen Keyboard for FireFox",
+    "name": "FX OSK FR",
+    "version": "1.12.0",
+    "description": "French On-Screen Keyboard for FireFox",
     "icons": {
         "48": "icon.svg",
         "96": "icon.svg"
